alignment Problem solved

--- a/style.css
+++ b/style.css
@@ -77,13 +77,16 @@ nav {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row-gap: 30px;
+   
 }
 
 .player {
    display: flex;
    width: 100%;
+   text-align: left;
    align-items: center;
-   justify-content: center;
+   padding-left: 20%;
+   padding-right: 20%;
 }
 
 .player img {
